[gd_scene load_steps=6 format=3 uid="uid://bkouqk5h3ub1b"]

[ext_resource type="Script" path="res://Cup_1.gd" id="1_sl7sn"]
[ext_resource type="Texture2D" uid="uid://tfsrt8a0exlg" path="res://cups/teacup_1_break1.png" id="2_8gjc2"]
[ext_resource type="Texture2D" uid="uid://udj8ol5c78pk" path="res://cups/teacup_1_break2.png" id="3_jtd8h"]
[ext_resource type="Texture2D" uid="uid://b4fab1y6c1p5p" path="res://cups/teacup_1.png" id="4_7j2k5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nyf6i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8gjc2")
}, {
"duration": 1.0,
"texture": ExtResource("3_jtd8h")
}],
"loop": false,
"name": &"break",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jtd8h")
}],
"loop": false,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7j2k5")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Cup_2" type="CharacterBody2D"]
position = Vector2(138, -2)
scale = Vector2(2, 2)
script = ExtResource("1_sl7sn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-7, 2, -7, 5, -6, 5, -6, 11, -5, 11, -5, 12, 3, 12, 3, 11, 4, 11, 5, 2, 4, 2, 4, 1, -6, 1, -6, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nyf6i")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
